
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct d3d11_local_swapchain {int obj; int dxgiswapChain; } ;
struct TYPE_3__ {int member_0; } ;
typedef scalar_t__ HRESULT ;
typedef TYPE_1__ DXGI_PRESENT_PARAMETERS ;


 scalar_t__ DXGI_ERROR_DEVICE_REMOVED ;
 scalar_t__ DXGI_ERROR_DEVICE_RESET ;
 scalar_t__ IDXGISwapChain1_Present1 (int ,int ,int ,TYPE_1__*) ;
 int msg_Err (int ,char*,scalar_t__) ;

void LocalSwapchainSwap( void *opaque )
{
    struct d3d11_local_swapchain *display = opaque;
    DXGI_PRESENT_PARAMETERS presentParams = { 0 };

    HRESULT hr = IDXGISwapChain1_Present1( display->dxgiswapChain, 0, 0, &presentParams );
    if ( hr == DXGI_ERROR_DEVICE_REMOVED || hr == DXGI_ERROR_DEVICE_RESET )
    {

        msg_Err( display->obj, "SwapChain Present failed. (hr=0x%lX)", hr );
    }
}
